# mlzoomcamp-capstone-project-2023

./: .gitignore  README.md  docker-compose.yml  install.sh  requirements.txt
services/app/: Dockerfile  requirements.txt
services/ds/: Dockerfile  requirements.txt
src/app/: app.py  stats.json
src/us-insurance/: README.md  pyproject.toml  session_store.db  stats.json
src/us-insurance/conf/base/: catalog.yml  parameters.yml  parameters_data_processing.yml  parameters_data_science.yml  parameters_inference.yml
src/us-insurance/notebooks/: 1_EDA.ipynb
src/us-insurance/src/tests/pipelines/data_processing/: test_pipeline.py
src/us-insurance/src/tests/pipelines/data_science/: test_pipeline.py
src/us-insurance/src/tests/pipelines/inference/: test_pipeline.py
src/us-insurance/src/us_insurance/: __init__.py  __main__.py
src/us-insurance/src/us_insurance/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/us-insurance/src/us_insurance/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/us-insurance/src/us_insurance/pipelines/inference/: __init__.py  nodes.py  pipeline.py
